crates/search/tests/settings/snapshots/vectors.rs/bad_parameters_2/huggingFace-url-sending_result.snap
---
source: crates/indexsearch/tests/settings/vectors.rs
---
{
  "message": "`.embedders.test`: Field `url` unavailable for source `huggingFace`.\n  - note: `url` is available for sources: `openAi`, `ollama`, `rest`\n  - note: available fields for source `huggingFace`: `source`, `model`, `revision`, `pooling`, `documentTemplate`, `documentTemplateMaxBytes`, `distribution`, `binaryQuantized`",
  "code": "invalid_settings_embedders",
  "type": "invalid_request",
  "link": "https://docs.hanzo.ai/errors#invalid_settings_embedders"
}
