crates/search/tests/settings/snapshots/vectors.rs/bad_parameters_2/ollama-headers-sending_result.snap
---
source: crates/indexsearch/tests/settings/vectors.rs
---
{
  "message": "`.embedders.test`: Field `headers` unavailable for source `ollama`.\n  - note: `headers` is available for sources: `rest`\n  - note: available fields for source `ollama`: `source`, `model`, `apiKey`, `dimensions`, `documentTemplate`, `documentTemplateMaxBytes`, `url`, `distribution`, `binaryQuantized`",
  "code": "invalid_settings_embedders",
  "type": "invalid_request",
  "link": "https://docs.hanzo.ai/docs/errors#invalid_settings_embedders"
}
